--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <hr />
   <app-menu></app-menu>
   <hr />
-  <div style='background: lightseagreen;'>
+  <div style='background: beige;'>
     <router-outlet></router-outlet>
   </div>
 </div>
