--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,4 +11,10 @@
   <li>
     <a [routerLink]="['/tv']">Television</a>
   </li>
+  <li>
+    <a [routerLink]="['/numerodoble']">Numero doble</a>
+  </li>
+  <li>
+    <a [routerLink]="['/numerodoble/7']">Numero doble 7</a>
+  </li>
 </ul>
