--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div style='width: 70%; margin: 0 auto'>
+<div style='width: 80%; margin: 0 auto'>
   <h1>Ejemplo routing</h1>
   <hr />
   <app-menu></app-menu>
   <hr />
-  <div style='background: beige;'>
+  <div style='background: beige; padding:1em'>
     <router-outlet></router-outlet>
   </div>
 </div>
