--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -17,4 +17,7 @@
   <li>
     <a [routerLink]="['/numerodoble/7']">Numero doble 7</a>
   </li>
+  <li>
+    <a [routerLink]="['/menucollatz']">Menu Collatz</a>
+  </li>
 </ul>
