--- a/src/app/components/numerodoble/numerodoble.component.html
+++ b/src/app/components/numerodoble/numerodoble.component.html
@@ -1,4 +1,9 @@
-<p>Ejemplo rutas parámetros</p>
+<h2>Ejemplo rutas parámetros</h2>
+<hr />
+<button (click)='redirect(66)'>Enviar 66</button>
+<button (click)='redirect(88)'>Enviar 88</button>
+<button (click)='redirect(99)'>Enviar 99</button>
+<hr />
 <div *ngIf='numero'>
   <h1 style='color:darkblue'>
     El doble de {{numero}} es <span style='color: darkred'>{{doble}}</span>
