--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -20,4 +20,10 @@
   <li>
     <a [routerLink]="['/menucollatz']">Menu Collatz</a>
   </li>
+  <li>
+    <a [routerLink]="['/listaproductos']">Lista productos</a>
+  </li>
+  <li>
+    <a [routerLink]="['/concesionario']">Concesionario</a>
+  </li>
 </ul>
